--- a/bedrock/mozorg/templates/mozorg/contact/spaces/tokyo.html
+++ b/bedrock/mozorg/templates/mozorg/contact/spaces/tokyo.html
@@ -22,7 +22,8 @@
         </p>
 
         <figure class="feature-img">
-          <img src="//api.tiles.mapbox.com/v4/{{ settings.MAPBOX_TOKEN }}/url-{{ 'mozorg.cdn.mozilla.net/media/img/contact/moz-map-pin.png'|urlencode }}(139.727765,35.665208)/139.727765,35.665208,16/460x250.png?access_token={{ settings.MAPBOX_ACCESS_TOKEN }}" alt="">
+          {% set pin = static('img/contact/moz-map-pin.png')|absolute_url %}
+          <img src="https://api.tiles.mapbox.com/v4/{{ settings.MAPBOX_TOKEN }}/url-{{ pin|urlencode }}(139.727765,35.665208)/139.727765,35.665208,16/460x250.png?access_token={{ settings.MAPBOX_ACCESS_TOKEN }}" alt="">
         </figure>
       </div>
 
