Add missing name to q2 2016

--- a/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
+++ b/bedrock/security/templates/security/bug-bounty/web-hall-of-fame.html
@@ -46,6 +46,7 @@
             <li>Karim Valiev</li>
             <li>Adel Afsharipour</li>
             <li>Yassine Aboukir</li>
+            <li>Jose Carlos Exposito Bueno</li>
           </ul>
           <h4>1st Quarter 2016</h4>
           <ul>
