[fix bug 1302507] Deactivate mobile-download/desktop URL.

--- a/bedrock/firefox/templates/firefox/mobile-download-desktop.html
+++ b/bedrock/firefox/templates/firefox/mobile-download-desktop.html
@@ -2,6 +2,12 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
+{#
+This page was originally planned for release on 9/12/16, but was pushed back due
+to reasons. Expectation is for this page to be released around the time of
+Firefox 50 (11/8/2016).
+#}
+
 {% from "macros.html" import google_play_button, send_to_device with context %}
 
 {% add_lang_files "firefox/sendto" %}
