--- a/media/css/firefox/new/horizon/common.less
+++ b/media/css/firefox/new/horizon/common.less
@@ -61,7 +61,8 @@
     height: 602px;
     left: -375px;
     position: absolute;
-    width: 880px;
+    width: 909px;
+    pointer-events: none;
 }
 
 .trees-right {
@@ -70,6 +71,7 @@
     position: absolute;
     right: -420px;
     width: 922px;
+    pointer-events: none
 }
 
 .fox {
