--- a/bedrock/mozorg/templates/mozorg/technology/index.html
+++ b/bedrock/mozorg/templates/mozorg/technology/index.html
@@ -123,8 +123,8 @@
       </div>
       <footer>
         <ul>
-          <li><a rel="external" href="#">{{ _('TODO Insert link') }}</a></li>
-          <li><a rel="external" href="#">{{ _('TODO Insert Link') }}</a></li>
+          <li><a rel="external" href="https://wiki.mozilla.org/Context_Graph">{{ _('Visit the wiki') }}</a></li>
+          <li><a rel="external" href="https://testpilot.firefox.com/experiments/activity-stream">{{ _('Try it now') }}</a></li>
         </ul>
       </footer>
     </section>
