--- a/media/css/mozorg/technology.less
+++ b/media/css/mozorg/technology.less
@@ -47,7 +47,7 @@ main {
 }
 
 #masthead {
-    background: #c33b32;
+    background: #d93a33;
     color: #fff;
     padding: 0;
     width: 100%;
@@ -74,23 +74,23 @@ main {
         margin: 0;
     }
 
-    nav > ul > li {
-        border-right: 1px solid #fff;
-        float: left;
-        padding: 15px 10px;
+    nav {
+        padding: 15px 0;
 
-        a:link,
-        a:visited,
-        a:hover,
-        a:active,
-        a:focus {
-            padding: 0 12px;
-            color: #fff;
-        }
+        ul > li {
+            float: left;
+            padding: 0;
 
-        &:last-child {
-            border-right: 0;
-            padding-right: 8px;
+            a:link,
+            a:visited {
+                border-left: 1px solid #fff;
+                padding: 0 12px;
+                color: #fff;
+            }
+
+            &.first > a {
+                border-left: none;
+            }
         }
     }
 
@@ -116,29 +116,26 @@ main {
 
     @media only screen and (max-width: @breakDesktop) {
 
-        nav > ul > li {
-            padding: 15px 0;
-
-            &:last-child {
-                padding-right: 0;
-            }
-        }
-
         .download-button .download-link {
             padding: 15px 12px;
         }
     }
 
     @media only screen and (max-width: @breakTablet) {
-        padding: 0 0 10px;
 
-        nav > ul > li {
+        .container {
+            width: 100%;
+        }
+
+        nav {
             padding: 0;
 
-            a:link,
-            a:visited {
-                .font-size(@baseFontSize);
-                color: @textColorSecondary;
+            ul > li {
+                a:link,
+                a:visited {
+                    .font-size(@baseFontSize);
+                    color: @textColorSecondary;
+                }
             }
         }
 
@@ -153,6 +150,20 @@ main {
 
         .download-button {
             display: none;
+        }
+    }
+}
+
+#nav-main {
+    .toggle {
+        background: #c13832 url('/media/img/mozorg/template/icon-menu.svg') center center no-repeat;
+        .background-size(22px auto);
+        top: 0;
+        height: 51px;
+        width: 51px;
+
+        &.open {
+            background-position: center center;
         }
     }
 }
@@ -456,11 +467,13 @@ main {
     }
 
     &:after {
-        .at2x('/media/img/mozorg/technology/gaming.png', 512px, 512px);
-        .background-size(contain);
+        background-image: url('/media/img/mozorg/technology/gaming-yeti.svg'),
+                          url('/media/img/mozorg/technology/gaming-background.svg');
         background-color: #a3f3fe;
-        background-position: top right;
-        background-repeat: no-repeat;
+        background-position: bottom -90px left 250px, bottom right;
+        background-repeat: no-repeat, no-repeat;
+        -webkit-background-size: contain, cover;
+                background-size: contain, cover;
         content: '';
         height: 100%;
         position: absolute;
@@ -470,14 +483,40 @@ main {
         z-index: -1;
     }
 
+    @media only screen and (max-width: @breakDesktop) {
+
+        &:after {
+            background-position: bottom -90px left 100px, bottom right;
+        }
+    }
+
     @media only screen and (max-width: @breakTablet) {
         padding-top: 256px;
 
         &:after {
-            .background-size(256px 256px);
-            background-position: bottom center;
+            background-position: bottom -60px right -30px, bottom right;
             height: 256px;
             width: 100%;
+        }
+    }
+}
+
+.developer #gaming {
+    &:after {
+        background-position: bottom -20px left 250px, bottom right;
+    }
+
+    @media only screen and (max-width: @breakDesktop) {
+
+        &:after {
+            background-position: bottom -20px left 100px, bottom right;
+        }
+    }
+
+    @media only screen and (max-width: @breakTablet) {
+
+        &:after {
+            background-position: bottom -60px right -30px, bottom right;
         }
     }
 }
@@ -547,6 +586,13 @@ main {
         top: 0;
         width: 50%;
         z-index: -1;
+    }
+
+    @media only screen and (max-width: @breakDesktop) {
+
+        &:after {
+            .background-size(400px 322px);
+        }
     }
 
     @media only screen and (max-width: @breakTablet) {
@@ -810,7 +856,7 @@ main {
 
 #blogs {
     background: #f2f2f2;
-    padding-top: @baseLine * 3;
+    padding: (@baseLine * 3) 0;
 
     header {
         margin-bottom: @baseLine * 2;
@@ -837,12 +883,15 @@ main {
     }
 
     article {
-        position: relative;
+        margin-bottom: @baseLine;
         padding-bottom: @baseLine * 2;
+        position: relative;
 
         h3 {
             .font-size(32px);
             font-weight: bold;
+            line-height: 1.3;
+            max-width: 24em;
 
             a:link,
             a:visited {
@@ -856,6 +905,11 @@ main {
 
         .meta {
             .font-size(24px);
+
+            a:link,
+            a:visited {
+                color: #56565a;
+            }
         }
 
         time {
